# notion-to-markdown

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
client/: Cargo.toml
client/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: block.rs  lib.rs  rich_text.rs
core/src/block/: bookmark.rs  breadcrumb.rs  bulleted_list_item.rs  callout.rs  child_database.rs  child_page.rs  code.rs  column.rs  column_list.rs  divider.rs  embed.rs  equation.rs  file.rs  heading_1.rs  heading_2.rs  heading_3.rs  image.rs  link_preview.rs  link_to_page.rs  numbered_list_item.rs  paragraph.rs  pdf.rs  quote.rs  synced_block.rs  table.rs  table_of_contents.rs  template.rs  to_do.rs  toggle.rs  video.rs
core/src/tests/block/: bookmark_response.json  breadcrumb_response.json  bulleted_list_item_response.json  callout_response.json  checked_to_do_response.json  code_response.json  column_list_response.json  column_response.json  embed_response.json  equation_response.json  headline1_response.json  image_response.json  link_preview_response.json  link_to_page_response.json  numbered_list_item_response.json  synced_block_response.json  table_of_contents_response.json  table_response.json  table_row_response.json  template_response.json  toggle_response.json  unchecked_to_do_response.json  video_response.json
src/: block.rs  lib.rs  page.rs  rich_text.rs  test_utils.rs  utils.rs
src/block/: bookmark.rs  bulleted_list_item.rs  callout.rs  child_database.rs  child_page.rs  code.rs  divider.rs  equation.rs  file.rs  heading1.rs  heading2.rs  heading3.rs  heading_1.rs  (+10 more)
(+20 files in other folders)
