[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
notion-to-markdown-core = { path = "../core" }
tokio = { version = "1.45.0", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenvy = "0.15.7"
